--- a/SMLRcam/SMLRcam/ReleaseNotes.txt
+++ b/SMLRcam/SMLRcam/ReleaseNotes.txt
@@ -1,5 +1,10 @@
 Release Notes:
 
+- Progress view now works
+- MapView crash resolved
+- Image upload crash resolved
+- latency on first launch resolved - images should now appear much faster on ap launch.
+
 V0.13 B13
 
 Released: 2013-12-01 21:30:00
