Update release notes for compass orientation fix.

--- a/SMLRcam/SMLRcam/ReleaseNotes.txt
+++ b/SMLRcam/SMLRcam/ReleaseNotes.txt
@@ -1,5 +1,6 @@
 Release Notes:
 
+- use homography to properly calculate compass heading on matched images
 
 ******************************************
 
