--- a/SMLRcam/SMLRcam/ReleaseNotes.txt
+++ b/SMLRcam/SMLRcam/ReleaseNotes.txt
@@ -1,4 +1,6 @@
 Release Notes:
+- Kalman does not initialize without valid heading
+- feature matching not performed until Kalman initialized
 
 ******************************************
 
