--- a/SMLRcam/SMLRcam/ReleaseNotes.txt
+++ b/SMLRcam/SMLRcam/ReleaseNotes.txt
@@ -4,6 +4,7 @@ Release Notes:
 - minor tweaks to check if homography is valid during feature matching
 - fix Kalman reset logic to re-attempt to match images
 - change Kalman reset distance back to 10.0 m
+- disables social filter cells
 
 ******************************************
 
