--- a/SMLRcam/SMLRcam/ReleaseNotes.txt
+++ b/SMLRcam/SMLRcam/ReleaseNotes.txt
@@ -1,5 +1,5 @@
 Release Notes:
-
+- minor improvements to check if feature matching results are valid
 
 ******************************************
 
