--- a/SMLRcam/SMLRcam/ReleaseNotes.txt
+++ b/SMLRcam/SMLRcam/ReleaseNotes.txt
@@ -1,4 +1,6 @@
 Release Notes:
+- indicator in map view for current location updated with visual improvements
+- when zoomed in with map, radius of animated circle on current location indicator shows horizontal accuracy
 
 ******************************************
 
