--- a/SMLRcam/SMLRcam/ReleaseNotes.txt
+++ b/SMLRcam/SMLRcam/ReleaseNotes.txt
@@ -6,6 +6,7 @@ Release Notes:
 - add support for downloading and rendering square images
 - add support for proper camera model determination for improved rendering
 - fixes to profile image management grid display
+- fix to resolution used in calculating R and t using SolvePnP method
 
 ******************************************
 
