Update release notes for camera frame auto-threshold selection.

--- a/SMLRcam/SMLRcam/ReleaseNotes.txt
+++ b/SMLRcam/SMLRcam/ReleaseNotes.txt
@@ -1,4 +1,5 @@
 Release Notes:
+- auto-calculate threshold parameter for feature extraction of camera frame
 
 ******************************************
 
