--- a/SMLRcam/SMLRcam/ReleaseNotes.txt
+++ b/SMLRcam/SMLRcam/ReleaseNotes.txt
@@ -1,5 +1,6 @@
 Release Notes:
 - auto-calculate threshold parameter for feature extraction of camera frame
+- feature matching will begin once features are downloaded but no longer requires image to be downloaded as well
 
 ******************************************
 
