Update ReleaseNotes for more frequent request of nearby items.

--- a/SMLRcam/SMLRcam/ReleaseNotes.txt
+++ b/SMLRcam/SMLRcam/ReleaseNotes.txt
@@ -1,8 +1,8 @@
 Release Notes:
 - auto-calculate threshold parameter for feature extraction of camera frame
 - feature matching will begin once features are downloaded but no longer requires image to be downloaded as well
-
 - fix time scrubbing to allow scrolling through all imagery, down to the last one.
+- add call to request nearby items after reset of Kalman filter and after initialization
 
 ******************************************
 
