Update Release Notes for location update timer

--- a/SMLRcam/SMLRcam/ReleaseNotes.txt
+++ b/SMLRcam/SMLRcam/ReleaseNotes.txt
@@ -1,4 +1,6 @@
 Release Notes:
+
+- add location update timer to ensure a location update is sent at least every 5s regardless of Apple and/or Kalman state
 - auto-calculate threshold parameter for feature extraction of camera frame
 - feature matching will begin once features are downloaded but no longer requires image to be downloaded as well
 - fix time scrubbing to allow scrolling through all imagery, down to the last one.
