Update of ReleaseNotes for feature descriptor download throttling and prioritization.

--- a/SMLRcam/SMLRcam/ReleaseNotes.txt
+++ b/SMLRcam/SMLRcam/ReleaseNotes.txt
@@ -1,6 +1,6 @@
 Release Notes:
-
 - HACK fix to force reload of Profile picture.
+- throttle total number of feature descriptor downloads to reduce startup latency
 
 ******************************************
 
