Update ReleaseNotes for fix for MapView crash

--- a/SMLRcam/SMLRcam/ReleaseNotes.txt
+++ b/SMLRcam/SMLRcam/ReleaseNotes.txt
@@ -1,6 +1,7 @@
 Release Notes:
 - HACK fix to force reload of Profile picture.
 - throttle total number of feature descriptor downloads to reduce startup latency
+- prevent crash in MapView when zooming in/out with lots of content
 
 ******************************************
 
