--- a/SMLRcam/SMLRcam/ReleaseNotes.txt
+++ b/SMLRcam/SMLRcam/ReleaseNotes.txt
@@ -2,6 +2,7 @@ Release Notes:
 - HACK fix to force reload of Profile picture.
 - throttle total number of feature descriptor downloads to reduce startup latency
 - prevent crash in MapView when zooming in/out with lots of content
+- set image request altitude to be current altitude +-3m. Mapview still requests all altitudes (+- 100000m)
 
 ******************************************
 
