Primary changes to support request and processing of binary-structured feature files over larger XML-based files. Principle changes include switching to NSData from NSString for “features” references and parsing of binary data. This version still needs some checking on buffer length overruns while processing, etc. Header magic number and version checks are included in the FluxFeatureMatchingRecord:hasObjectFeatures check.

--- a/SMLRcam/SMLRcam/ReleaseNotes.txt
+++ b/SMLRcam/SMLRcam/ReleaseNotes.txt
@@ -3,6 +3,7 @@ Release Notes:
 - throttle total number of feature descriptor downloads to reduce startup latency
 - prevent crash in MapView when zooming in/out with lots of content
 - set image request altitude to be current altitude +-3m. Mapview still requests all altitudes (+- 100000m)
+- change feature download to request and process binary feature file
 
 ******************************************
 
