Remove extraneous call to requestNearbyItems that caused a request before locationServices had a valid location.  This resulted in the scan-view image counter showing 3 images that never rendered or showed in the compass. Original purpose was to ensure an initial request for imagery was made before the Kalman initialized so there wouldn’t be a long delay before seeing imagery. This has been better addressed by the location update timer which ensures imagery is requested at least every 5 seconds.

--- a/SMLRcam/SMLRcam/ReleaseNotes.txt
+++ b/SMLRcam/SMLRcam/ReleaseNotes.txt
@@ -1,5 +1,7 @@
 Release Notes:
 
+- fix startup count=3 issue (remove extraneous / too early call to requestNearbyItems)
+
 ******************************************
 
 V0.18 B02
