Update Release notes

--- a/SMLRcam/SMLRcam/ReleaseNotes.txt
+++ b/SMLRcam/SMLRcam/ReleaseNotes.txt
@@ -1,6 +1,7 @@
 Release Notes:
 
 - fix startup count=3 issue (remove extraneous / too early call to requestNearbyItems)
+- fix logout issue
 
 ******************************************
 
