Update release notes for Trello issue #334 (update count for nearby list with no items).

--- a/SMLRcam/SMLRcam/ReleaseNotes.txt
+++ b/SMLRcam/SMLRcam/ReleaseNotes.txt
@@ -1,4 +1,5 @@
 Release Notes:
+- update count and list of nearby items in locations with no content (Trello issue #334)
 
 ******************************************
 
