--- a/SMLRcam/SMLRcam/ReleaseNotes.txt
+++ b/SMLRcam/SMLRcam/ReleaseNotes.txt
@@ -1,5 +1,7 @@
 Release Notes:
+
 - update count and list of nearby items in locations with no content (Trello issue #334)
+- fix profile pictures so they don't "go away" when the app is re-downloaded (Trello issue #261)
 
 ******************************************
 
