Fix Trello issue #264 - newly captured images disappear briefly after upload. When upload is complete the system was overwriting the local metadata with the “new” metadata which was missing the justCaptured flag along with all transform and homography data. In short, the “current” local metadata is more complete and up-to-date than the “updated” metadata coming from the notification.  This overwriting was removed. A series of diagnostic log messages were left in (commented out) for the time being.

--- a/SMLRcam/SMLRcam/ReleaseNotes.txt
+++ b/SMLRcam/SMLRcam/ReleaseNotes.txt
@@ -1,5 +1,7 @@
 Release Notes:
 
+- fix issue with newly captured image disappearing briefly after upload (Trello issue #264)
+
 ******************************************
 
 V0.18 B04
