--- a/SMLRcam/SMLRcam/ReleaseNotes.txt
+++ b/SMLRcam/SMLRcam/ReleaseNotes.txt
@@ -2,6 +2,8 @@ Release Notes:
 
 - fix issue with newly captured image disappearing briefly after upload (Trello issue #264)
 - display proper profile image on image detail view (Trello issue #316)
+- improvements to images output to photo roll
+- enable output of feature matching debug images to photo reel
 
 ******************************************
 
