Disable output of debug images for feature matching to photo reel.

--- a/SMLRcam/SMLRcam/ReleaseNotes.txt
+++ b/SMLRcam/SMLRcam/ReleaseNotes.txt
@@ -1,5 +1,6 @@
 Release Notes:
 ******************************************
+- actually disable output of feature matching debug images to photo reel
 
 V0.19 B02
 
