--- a/SMLRcam/SMLRcam/ReleaseNotes.txt
+++ b/SMLRcam/SMLRcam/ReleaseNotes.txt
@@ -1,5 +1,6 @@
 Release Notes:
-- reduce memory leak during logout
+- reduce memory leaked during logout
+- adjust granularity of pin grouping on map to improve accuracy of individual image locations
 
 Release Notes:
 ******************************************
