Update of ReleaseNotes for cache and image selection changes.

--- a/SMLRcam/SMLRcam/ReleaseNotes.txt
+++ b/SMLRcam/SMLRcam/ReleaseNotes.txt
@@ -5,6 +5,7 @@ Release Notes:
 - fixes registrationVC bugs
 - profileView bug fixes
 - debug view added
+- image selection and cache improvements to prepare for clearing out old image content
 
 Release Notes:
 ******************************************
