--- a/SMLRcam/SMLRcam/ReleaseNotes.txt
+++ b/SMLRcam/SMLRcam/ReleaseNotes.txt
@@ -8,6 +8,7 @@ Release Notes:
 - image selection and cache improvements to prepare for clearing out old image content
 - feature matching debug image enable option added to debug view
 - fix for Trello Issue #306 (Tapping does not work if the time slider is not at the latest image)
+- download thumbnails and quarterHD resolution images for newly acquired imagery to improve performance
 
 Release Notes:
 ******************************************
