--- a/SMLRcam/SMLRcam/ReleaseNotes.txt
+++ b/SMLRcam/SMLRcam/ReleaseNotes.txt
@@ -3,6 +3,7 @@ Release Notes:
 - fix for Trello Issue #347 (If there is no content, the compass will not show it's outer ring)
 - ensure that download of thumbnails has immediate effect in rendering of content and radar view
 - center content in bins in radar view to improve alignement of bars and content
+- temporarily removed share view for snapshots until FB graph objects are made, all snapshot sharing is now iOS based.
 
 ******************************************
 
