Update release notes for consolidation of device motion managers and pedometer count debug option.

--- a/SMLRcam/SMLRcam/ReleaseNotes.txt
+++ b/SMLRcam/SMLRcam/ReleaseNotes.txt
@@ -1,5 +1,8 @@
 Release Notes:
 
+- consolidate device motion managers
+- add pedometer count display debug option to debug view
+
 ******************************************
 
 V0.19 B05
