Fixups for merge issues. Repoint to Flux Production server.

--- a/SMLRcam/SMLRcam/ReleaseNotes.txt
+++ b/SMLRcam/SMLRcam/ReleaseNotes.txt
@@ -4,6 +4,9 @@ Release Notes:
 - add pedometer count display debug option to debug view
 - fix issue with R and t transforms in feature matching (Trello #391)
 - add support for APNs registration and device token registration to Flux server
+- add historical content upload capabilities
+- repoint to production server
+- disable verbose logging of network activity
 
 ******************************************
 
