--- a/SMLRcam/SMLRcam/ReleaseNotes.txt
+++ b/SMLRcam/SMLRcam/ReleaseNotes.txt
@@ -2,6 +2,8 @@ Release Notes:
 
 - re-enable My Network access
 - re-enable APNs registration
+- Adds social filters (filter by friends & those I'm following)
+- Updates TestfLight to Version 2.2.1
 
 ******************************************
 
