Trello Issue #432: change heading accuracy for Kalman Filter enable/disable to 30 degrees from 20 degrees. Will reduce occurrence of camera button being grayed out, even if location is good.

--- a/SMLRcam/SMLRcam/ReleaseNotes.txt
+++ b/SMLRcam/SMLRcam/ReleaseNotes.txt
@@ -1,6 +1,6 @@
 Release Notes:
 - updates to address at least one of the iPad issues
-
+- Trello Issue #432: change heading accuracy for Kalman Filter enable/disable to 30 degrees from 20 degrees
 ******************************************
 
 V0.20 B04
