MapView releases memory when returning to ScanView. - MapView instance is now a local variable when pushed modally by ScanView and no reference is stored - firstRunDone removed from MapView (creates a new instance each time it is launched)

--- a/SMLRcam/SMLRcam/ReleaseNotes.txt
+++ b/SMLRcam/SMLRcam/ReleaseNotes.txt
@@ -1,6 +1,8 @@
 Release Notes:
 - updates to address at least one of the iPad issues
 - Trello Issue #432: change heading accuracy for Kalman Filter enable/disable to 30 degrees from 20 degrees
+- release memory used by MapView when exiting view
+
 ******************************************
 
 V0.20 B04
