--- a/SMLRcam/SMLRcam/ReleaseNotes.txt
+++ b/SMLRcam/SMLRcam/ReleaseNotes.txt
@@ -2,6 +2,11 @@ Release Notes:
 - updates to address at least one of the iPad issues
 - Trello Issue #432: change heading accuracy for Kalman Filter enable/disable to 30 degrees from 20 degrees
 - release memory used by MapView when exiting view
+- social management updates
+- new map pins
+- snapshots can now be shared via Facebook + Twitter
+- new message when no profile images are available for display
+- other visual tweaks + enhancements
 
 ******************************************
 
@@ -14,6 +19,7 @@ Release Notes:
 - App now uses a single filter for both scan and map views
 - Social filters now include counts + overall image count is now more accurate
 - Other minor visual tweaks + improvements
+
 
 ******************************************
 
