Update date formats so that timestamp values uploaded to db and parsed from db include milliseconds. Update date format used to generate unique image IDs (localID) to include milliseconds. Remove 1 second delay before re-enabling the camera image acquisition button

--- a/SMLRcam/SMLRcam/ReleaseNotes.txt
+++ b/SMLRcam/SMLRcam/ReleaseNotes.txt
@@ -1,5 +1,6 @@
 Release Notes:
 - update of OpenCV to version 2.4.8.2 with 64-bit support with Xcode 5.1
+- update to use msec on timestamp from images to eliminate duplication when rapid-fire collecting
 
 ******************************************
 
