--- a/SMLRcam/SMLRcam/ReleaseNotes.txt
+++ b/SMLRcam/SMLRcam/ReleaseNotes.txt
@@ -1,4 +1,17 @@
 Release Notes:
+
+-Social structure updated:
+  1) Interested in someone's pictures? Send a follower request and filter by just their stuff
+  2) Manage your own followers and thise you're following under the profile menu
+  
+- Walkthrough added
+- Filters has been tweaked
+- Public profile tweaks
+- Get to a public profile from tapping an image
+- Image capture tweaks
+- Assorted bug fixes + improvements
+
+
 ******************************************
 
 V0.22 B02
