Update ReleaseNotes for heading-corrected orientation changes.

--- a/SMLRcam/SMLRcam/ReleaseNotes.txt
+++ b/SMLRcam/SMLRcam/ReleaseNotes.txt
@@ -1,4 +1,6 @@
 Release Notes:
+- completed heading-corrected orientation using new method (not yet default)
+
 ******************************************
 
 V0.22 B03
