Cleanup format string and add proper timezone to formatter for image timestamps

--- a/SMLRcam/SMLRcam/ReleaseNotes.txt
+++ b/SMLRcam/SMLRcam/ReleaseNotes.txt
@@ -1,4 +1,7 @@
 Release Notes:
+
+- Clean up formatting and set correct time zone for timestamps of uploaded imagery
+
 ******************************************
 
 V0.23 B03
