Update default annotation text to be:
annotation_text #yale #setname

with #setname generated from the name of the photoset but only alpha-numeric characters.

--- a/SMLRcam/SMLRcam/ReleaseNotes.txt
+++ b/SMLRcam/SMLRcam/ReleaseNotes.txt
@@ -1,5 +1,6 @@
 Release Notes:
 ******************************************
+- update Flickr default annotation to use hashtag for set name
 
 V0.24 B01
 
