--- a/SMLRcam/SMLRcam/ReleaseNotes.txt
+++ b/SMLRcam/SMLRcam/ReleaseNotes.txt
@@ -1,6 +1,8 @@
 Release Notes:
 
 - Fixes some bugs in social contact import
+- Adds a message if not following anyone yet
+- UI Enhancements
 ******************************************
 
 V0.24 B09
