update release notes

--- a/SMLRcam/SMLRcam/ReleaseNotes.txt
+++ b/SMLRcam/SMLRcam/ReleaseNotes.txt
@@ -3,12 +3,13 @@ Release Notes:
 
 V0.26 B02
 
-Released: 2014-05-22 9:15:00
+Released: 2014-05-22 9:30:00
 
 Release Notes:
 - image tap updates
 - remove secure staging URL (certificate expired)
 - release email-based social functionality
+- enable mag declination calc and set delay to 20.0s
 
 ******************************************
 
